bulk like and reply
